kubebasics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alex-demo-service
spec:
  selector:
    app: alex-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: web-dep
  type: NodePort
