kubebasics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: alex-demo-service
                port:
                  number: 80
